--- a/whtsapp.html
+++ b/whtsapp.html
@@ -165,7 +165,7 @@
             <div class="div1">
                 <i class="fas fa-arrow-left" id="Larrow"></i>
                 <div> <img src="login.jpg" id="img1st" /> </div>
-                <div id="Fname"> Anonymous </div>
+                <div id="Fname"> Rupali Pangare </div>
                 <i class="fas fa-video" id="FontVideo"></i>
                 <i class="fas fa-phone-alt" id="FontCall"></i>
                 <i class="fas fa-ellipsis-v" id="FontEllipsis"></i>
